updated contact page backend

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1973,7 +1973,7 @@ input.num-product::-webkit-inner-spin-button {
   height: 20px;
   padding: 0px 8px;
   top: -35px;
-  left: 50%;
+  left: -300%;
   -webkit-transform: translateX(-50%);
   -moz-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
@@ -2001,6 +2001,50 @@ input.num-product::-webkit-inner-spin-button {
 }
 
 
+/*show pop up on message sent*/
+
+#snackbar {
+  visibility: hidden;
+  min-width: 250px;
+  margin-left: -125px;
+  background-color: #6c7ae0;
+  color: rgb(255, 255, 255);
+  border-radius: 4px;
+  text-align: center;
+  border-radius: 2px;
+  padding: 16px;
+  position: fixed;
+  z-index: 1;
+  left: 50%;
+  bottom: 30px;
+  font-size: 17px;
+}
+
+#snackbar.show {
+  visibility: visible;
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+@-webkit-keyframes fadein {
+  from {bottom: 0; opacity: 0;} 
+  to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+  from {bottom: 30px; opacity: 1;} 
+  to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+  from {bottom: 30px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
+}
 /*//////////////////////////////////////////////////////////////////
 [ Modal1 ]*/
 .wrap-modal {
