--- a/templates/contact.html
+++ b/templates/contact.html
@@ -320,7 +320,7 @@
 		<div class="container">
 			<div class="flex-w flex-tr">
 				<div class="size-210 bor10 p-lr-70 p-t-55 p-b-70 p-lr-15-lg w-full-md">
-					<form>
+					<form id='contact-form' name="contactform">
 						<h4 class="mtext-105 cl2 txt-center p-b-30">
 							Send Us A Message
 						</h4>
@@ -337,6 +337,7 @@
 						<button class="flex-c-m stext-101 cl0 size-121 bg3 bor1 hov-btn3 p-lr-15 trans-04 pointer">
 							Submit
 						</button>
+						<div id="snackbar">Message Sent..</div>
 					</form>
 				</div>
 
@@ -352,7 +353,7 @@
 							</span>
 
 							<p class="stext-115 cl6 size-213 p-t-18">
-								Coza Store Center 8th floor, 379 Hudson St, New York, NY 10018 US
+								Hang Store Center 3rd floor, 3/22 First St, Tiruppur, IN 641607
 							</p>
 						</div>
 					</div>
