updated last record fetching in DB

--- a/templates/shoping-cart.html
+++ b/templates/shoping-cart.html
@@ -331,7 +331,7 @@
 		
 
 	<!-- Shoping Cart -->
-	<form class="bg0 p-t-75 p-b-85" id="cart-form" name="checkout-form">
+	<form action="" class="bg0 p-t-75 p-b-85" id="cart-form" name="checkout-form">
 		<div class="container products-container product">
 			<div class="row">
 				<div class="col-lg-10 col-xl-10 m-lr-auto m-b-50">
@@ -543,7 +543,7 @@
 							</div>
 						</div>
 						<div>
-							<button class="flex-c-m stext-101 cl0 size-116 bg3 bor14 hov-btn3 p-lr-15 trans-04 pointer order-btn" type="submit">
+							<button type="submit" class="flex-c-m stext-101 cl0 size-116 bg3 bor14 hov-btn3 p-lr-15 trans-04 pointer order-btn">
 								Place Your Order
 							</button>
 						</div>
